<?xml version="1.0"?>
<package format="2">
  <name>image_sub</name>
  <version>2.0.0</version>
  <description>image subscription</description>

  <maintainer email="leo.wu@tm-robot.com">leo wu</maintainer>
  <maintainer email="yh.wang@tm-robot.com">Yh Wang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tm_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tm_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tm_msgs</exec_depend>

  <export>
  </export>
</package>
