<?xml version="1.0"?>
<package format="2">
  <name>tm14_description</name>
  <version>1.0.0</version>
  <description>
    URDF description for TM14 (1100) robot arms
  </description>

  <author email="ken.tsai@tm-robot.com">Ken Tsai</author>
  <maintainer email="ken.tsai@tm-robot.com">Ken Tsai</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
