<?xml version="1.0"?>
<package format="2">
  <name>tm_description</name>
  <version>1.1.1</version>
  <description>
    URDF description for Techman Robot arms
  </description>

  <author email="ken.tsai@tm-robot.com">Ken Tsai</author>
  <maintainer email="ken.tsai@tm-robot.com">Ken Tsai</maintainer>
  <maintainer email="yh.wang@tm-robot.com">Yh Wang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tmr_msgs</build_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tmr_msgs</exec_depend>

  <export>
  </export>
</package>
