<?xml version="1.0"?>
<package format="2">
  <name>ui_for_debug_and_demo</name>
  <version>1.1.1</version>
  <description>TM DEMO GUI (ui_for_debug_and_demo) is a Qt-based framework used to quickly start connection debugging tools.</description>
  <maintainer email="leo.wu@tm-robot.com">leowu</maintainer>
  <maintainer email="yh.wang@tm-robot.com">Yh Wang</maintainer>
  <license>BSD</license>
  <url type="repository">https://github.com/TechmanRobotInc/tmr_ros1</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tm_msgs</build_depend>
  <!--
  <build_depend>hardware_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  -->

  <exec_depend>actionlib</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>tm_msgs</exec_depend>
  <!--
  <exec_depend>ros_controllers</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  -->

  <export>
  </export>
</package>
